# rogii-wellbore-geology-prediction

./: .gitignore  README.md  SPRINT_ACTIVE.txt  TOOLKIT_PORT.md  experiments.jsonl  pyproject.toml
colab/: bootstrap.py
docs/: diary.md  eda.md  locator_design.md  nn_design.md  postmortem.md  reconnaissance.md  roadmap_to_9.5.md  sdtw_design.md  signal_revelation.md  strategy.md  submission_workflow.md
docs/versions/: v0_floor.md  v10_tabpfn.md  v12_spatialdip.md  v13_boosters.md  v14_locator.md  v15_squeeze.md  v18_optuna.md  v22_trusted_baseline.md  v2_geom.md  v2_geom_align.md  v3_noselfcorr.md  v3_selfcorr.md  v4_kernel9251.md  v5_ensemble.md  v6s4_fast.md  v6s8_fast.md  v8_feats.md  v9_postproc.md
notebooks/: 01_eda.py  02_floor_baseline.py  02b_revelation.py  03_baseline_lgb.py  04_gate_alignment.py  05_selfcorr_gate.py  06_kernel_baseline.py  07_ensemble.py  08_nn_phase1.py  09_features.py  10_postproc.py  11_tabfm.py  12_residual_diag.py  13_spatial_dip.py  14_boosters.py  15_locator.py  16_squeeze.py  17_max.py  18_autofe.py  19_optuna.py  20_sdtw.py  21_signal_hunt.py  22_v22_trusted_baseline.py  _build_colab_runner.py  _build_kaggle_infer.py  _build_leak_infer.py  colab_runner.ipynb  kaggle_infer.ipynb  kaggle_infer_leak.ipynb
reports/: eda_per_well.csv
src/: align.py  blend.py  config.py  cv.py  dashboard.py  data.py  diary.py  evaluate.py  features.py  features_auto.py  features_extra.py  features_sequence.py  features_spatial_dip.py  geosteer.py  kernel9251.py  locator_data.py  locator_model.py  nn_data.py  nn_model.py  observer.py  postproc.py  sdtw_data.py  sdtw_model.py  selfcorr.py  signal_hunt.py  spatial.py  submission.py  train.py
tests/: test_smoke.py  test_tooling.py
