[project]
name = "rogii-wellbore-geology-prediction"
version = "0.1.0"
description = "Kaggle ROGII Wellbore Geology Prediction — predict True Vertical Thickness (TVT) along horizontal wellbores from log curves, correlated to a vertical type-well. Tabular-sequence regression / geosteering automation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ilja Grigorjev", email = "grigorjev.ilja@gmail.com" }]
keywords = ["kaggle", "machine-learning", "regression", "sequence", "geosteering", "wellbore"]

# Ranges, not exact pins. Pin tighter only if regressions appear.
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.1,<4.0",
    "scipy>=1.10,<2.0",
    "scikit-learn>=1.3,<2.0",
    "lightgbm>=4.0,<5.0",
    "xgboost>=2.0,<4.0",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    # Shared toolkits (local, editable — see [tool.uv.sources])
    "kaggle-playground-utils",
    "synth-decoder",
    # Sequence / curve-alignment
    "dtaidistance>=2.3",      # DTW for typewell <-> horizontal curve alignment
    "numba>=0.59",            # JIT for the ported 9.251 feature engine (PF/DTW/beam)
]

[project.optional-dependencies]
boosting = ["catboost>=1.2,<2.0"]
# Neural tabular / sequence models (Colab) — added when the modeling phase needs them
neural = ["torch>=2.0,<3.0", "pytabkit>=1.5,<2.0"]
kaggle = ["kaggle>=1.6"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.6"]

# uv: resolve the two shared toolkits from local paths, editable so edits propagate.
[tool.uv.sources]
kaggle-playground-utils = { path = "../kaggle-playground-utils", editable = true }
synth-decoder = { path = "../../synth-decoder", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = ["E501"]
